fix: Changed Text Alignment for Top Rated Institutions and removed button topRated-navBtn

--- a/src/components/layout/TopRatedInstitutes.css
+++ b/src/components/layout/TopRatedInstitutes.css
@@ -7,7 +7,7 @@
 .topRated-container {
     max-width:1200px;
     margin:0 auto;
-    text-align: center;
+    text-align: left;
 }
 
 /* Header */
